--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ charset-normalizer==3.4.2
 click==8.2.1
 Django==5.2.4
 django-dotenv==1.4.2
+django-htmx==1.23.2
 django-tailwind-cli==4.2.4
 django-typer==3.2.0
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 psycopg2==2.9.10
 requests==2.32.4
@@ -16,3 +19,4 @@ sqlparse==0.5.3
 typer-slim==0.16.0
 typing_extensions==4.14.1
 urllib3==2.5.0
+whitenoise==6.9.0
